--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.PNG" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>funHub</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="FunHub - موقع ترفيهي يقدم ألعاب ومواقع ممتعة للاستمتاع بالوقت." />
+  <meta name="keywords" content="FunHub, ألعاب, مواقع ممتعة, ترفيه, مواقع كوميدية, مواقع تفاعلية" />
+  <meta name="author" content="Your Name or Company" />
+
+  <!-- Open Graph (Facebook, LinkedIn) -->
+  <meta property="og:title" content="FunHub" />
+  <meta property="og:description" content="اكتشف أفضل المواقع والألعاب الممتعة على FunHub" />
+  <meta property="og:image" content="https://yourdomain.com/logo.png" />
+  <meta property="og:url" content="https://yourdomain.com" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="FunHub" />
+  <meta name="twitter:description" content="استمتع بأفضل المواقع والألعاب على FunHub" />
+  <meta name="twitter:image" content="https://yourdomain.com/logo.png" />
+
+  <link rel="icon" type="image/svg+xml" href="/logo.PNG" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>funHub</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
