--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta name="twitter:description" content="استمتع بأفضل المواقع والألعاب على FunHub" />
   <meta name="twitter:image" content="https://yourdomain.com/logo.png" />
 
-  <link rel="icon" type="image/svg+xml" href="/logo.PNG" />
+  <link rel="icon" type="image/svg+xml" href="/fun.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>funHub</title>
 </head>
